@@ -182,6 +182,9 @@ public class TestFilterFileSystem {
     public boolean deleteOnExit(Path f) throws IOException {
       return false;
     }
+    public boolean cancelDeleteOnExit(Path f) throws IOException {
+      return false;
+    }
     public String getScheme() {
       return "dontcheck";
     }
