@@ -865,6 +865,8 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8550. hadoop fs -touchz automatically created parent directories
     (John George via bobby)
 
+    HADOOP-8635. Cannot cancel paths registered deleteOnExit (daryn via bobby)
+
 Release 0.23.2 - UNRELEASED 
 
   INCOMPATIBLE CHANGES
